# task6_mini_library

./: CMakeLists.txt  README.md  algo_lib_test.cpp  main.cpp  my_algo.h
data/: data1.txt  data2.txt  data3.txt
